--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-git+https://github.com/MichaelHoltonPrice/mixalot.git@2b4f2e6cb016e7775f91e107be8b4b8c779453b7
-numpy
+git+https://github.com/MichaelHoltonPrice/mixalot.git
+openpyxl
+tqdm
